# sync-web

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  plan.org
journal/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  wrapper.h
journal/.github/workflows/: all.yml
journal/lisp/: blockchain.scm  evaluator.scm  rdf.scm  scratch.scm  utils.scm
journal/src/: cache.rs  config.rs  evaluator.rs  main.rs
journal/src/extensions/: crypto.rs
journal/tests/: call.rs  crypto.rs  json.rs  primitives.rs  record.rs
tools/agent-recorder/: AGENTS.md  Cargo.toml  README.md
tools/agent-recorder/examples/: agent-recorder-otel.toml  agent-recorder-sync-web.toml  agent-recorder.toml  custom-agent.rs  integrity-agent-record.jsonld
tools/agent-recorder/schema/: agent-recorder.context.jsonld  agent-recorder.ttl
tools/agent-recorder/src/: adapters.rs  cli.rs  lib.rs  main.rs  records.rs
tools/agent-recorder/src/adapters/: claude.rs  codex.rs  gemini.rs  opencode.rs  pi.rs
tools/agent-recorder/src/integrity/: crypto.rs  mod.rs  schedule.rs  signing.rs  state.rs  verify.rs
tools/agent-recorder/src/records/: jsonl.rs  otel.rs  sync_web.rs
tools/agent-recorder/tests/: import_fixtures.rs
tools/agent-recorder/tests/fixtures/claude/: session.jsonl
tools/agent-recorder/tests/fixtures/codex/: rollout.jsonl
tools/agent-recorder/tests/fixtures/generated-claude/: fix_bug.jsonl  hello.jsonl  json_repair.jsonl  long_output.jsonl  no_op.jsonl  read_only.jsonl  test_diagnose.jsonl  text_stats.jsonl
(+4285 files in other folders)
