[package]
name = "journal-sdk"
version = "1.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[build-dependencies]
bindgen = "0.72.1"
cc = "1.0.83"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
mockito = "1.4.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version= "0.11.24", features = ["blocking"] }
rocksdb = "0.24.0"
sha2 = "0.10.8"
libc = "0.2"
log = "0.4.21"
env_logger = "0.10"
lru = "0.12.5"
crystals-dilithium = "1.0.0"
pqcrypto = "0.17.0"
tokio = { version = "1.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.149"
time = { version = "0.3.44", features = ["formatting"] }
